# routers/routers.go
@@ -1,12 +1,12 @@
 package routers
 
 import (
-	"IndustrialInternet/common/middleware"
-	_ "IndustrialInternet/common/middleware/jwt"
+	"IndustrialInternet/common/MiddleWare"
+	MiddleJWT "IndustrialInternet/common/MiddleWare/jwt"
+	_ "IndustrialInternet/common/MiddleWare/jwt"
 	"IndustrialInternet/config"
 	apiv1 "IndustrialInternet/controller/api/v1"
 	_ "IndustrialInternet/docs"
-	"IndustrialInternet/model/student"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -18,34 +18,34 @@ func InitServer() {
 	config.InitConnect()
 
 	// 配置swagger
-	server.Use(middleware.Cors())
+	server.Use(MiddleWare.Cors())
 	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	// 路由分组
 	api := server.Group("api")
 	{
+		// 响应体返回测试
 		api.GET("/login", apiv1.LoginTest)
 		api.GET("/normal", apiv1.NormalTest)
 		api.GET("/msgOK", apiv1.NormalOKTest)
 		v1 := api.Group("v1")
 		{
-			v1.Group("auth")
+			// 测试登录登出
+			auth:=v1.Group("auth")
 			{
-				v1.GET("/login", apiv1.Login())
-				v1.GET("/logout", apiv1.Login())
-				v1.GET("/notfound", apiv1.NotFoundPage())
+				auth.GET("/login", apiv1.Login)
+				auth.GET("/logout", apiv1.Login)
+				auth.GET("/notfound", apiv1.NotFoundPage())
 			}
 		}
+
+		// JWT模块测试
 		v2 := api.Group("v2")
 		{
-			//v2.GET("/login",jwt.JWTAuthMiddleware(),jwt.JWTHandler)
+			v2.GET("/login",MiddleJWT.JWTAuth(), apiv1.NotFoundPage())
 			v2.POST("/auth")
 		}
-		v3 := api.Group("v3")
-		{
-			v3.POST("/student", student.CreateStudent())
-			v3.GET("/student/:ID", student.GetStudent())
-			v3.GET("/class/:ID", student.GetClass())
-		}
+
+		// orm练手测试
 	}
 	server.Run(":8090")
 }
